tests/assembler/fail/test8.ial
type BrokenTypeSyntax
{
    field instance int32*. foo;
}
